# Copyright by The HDF Group. All rights reserved.

# This is the Makefile.am for the hdf5_plugin libs directory. It holds
# the tarballs of the libraries required for the filters. These may be
# helpful to users who don't have the libraries, so they are included
# in the distribution.
#
# Ed Hartnett 1/15/19

# Ship these with the hdf5_plugin tarball.
EXTRA_DIST = BZ2.tar.gz JPEG9c.tar.gz lz4.tar.gz lzma1604.7z	\
c-blosc.tar.gz JPEG-turbo.tar.gz lzf.tar.gz sz.tar.gz zfp.tar.gz
